updated notebook for scalibration

--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "YEAR = 2022"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -66,157 +75,143 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>H1</td>\n",
+       "      <td>M1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-4.302463e-09</td>\n",
-       "      <td>0.894084</td>\n",
+       "      <td>1.671544e-08</td>\n",
+       "      <td>0.986738</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>F2</td>\n",
+       "      <td>B2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-3.884088e-09</td>\n",
-       "      <td>0.818788</td>\n",
+       "      <td>5.923319e-08</td>\n",
+       "      <td>0.806152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>C1</td>\n",
+       "      <td>H2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>5.615007e-08</td>\n",
-       "      <td>1.071039</td>\n",
+       "      <td>-1.937380e-08</td>\n",
+       "      <td>1.075806</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>M2</td>\n",
+       "      <td>G1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>7.055282e-09</td>\n",
-       "      <td>0.966609</td>\n",
+       "      <td>4.740700e-08</td>\n",
+       "      <td>1.166787</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>A1</td>\n",
+       "      <td>A2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>9.565368e-08</td>\n",
-       "      <td>1.175509</td>\n",
+       "      <td>7.432325e-08</td>\n",
+       "      <td>1.051548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>D1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-9.485252e-08</td>\n",
-       "      <td>1.183850</td>\n",
+       "      <td>9.576999e-08</td>\n",
+       "      <td>1.170603</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>G1</td>\n",
+       "      <td>E2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-2.617468e-08</td>\n",
-       "      <td>0.867405</td>\n",
+       "      <td>-7.108686e-08</td>\n",
+       "      <td>1.105351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>A2</td>\n",
+       "      <td>F2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-9.247325e-08</td>\n",
-       "      <td>1.191295</td>\n",
+       "      <td>-8.985284e-08</td>\n",
+       "      <td>1.107622</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>I2</td>\n",
+       "      <td>C1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>3.922536e-08</td>\n",
-       "      <td>0.810140</td>\n",
+       "      <td>-1.716545e-08</td>\n",
+       "      <td>0.823004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>E1</td>\n",
+       "      <td>L2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-8.552598e-08</td>\n",
-       "      <td>1.015219</td>\n",
+       "      <td>-4.504549e-08</td>\n",
+       "      <td>1.061967</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>M1</td>\n",
+       "      <td>G2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>1.919863e-08</td>\n",
-       "      <td>1.063088</td>\n",
+       "      <td>-4.553415e-08</td>\n",
+       "      <td>0.959833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>L2</td>\n",
+       "      <td>H1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>3.305320e-08</td>\n",
-       "      <td>1.026705</td>\n",
+       "      <td>-2.917539e-08</td>\n",
+       "      <td>0.844489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>G2</td>\n",
+       "      <td>B1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>3.519425e-08</td>\n",
-       "      <td>1.094493</td>\n",
+       "      <td>1.503123e-08</td>\n",
+       "      <td>1.098547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>D2</td>\n",
+       "      <td>M2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>9.489726e-08</td>\n",
-       "      <td>0.822722</td>\n",
+       "      <td>9.192334e-08</td>\n",
+       "      <td>1.023620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>H2</td>\n",
+       "      <td>D2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>7.363812e-08</td>\n",
-       "      <td>0.981798</td>\n",
+       "      <td>1.779820e-08</td>\n",
+       "      <td>1.041835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>E2</td>\n",
+       "      <td>A1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-5.953871e-10</td>\n",
-       "      <td>0.959322</td>\n",
+       "      <td>-4.285620e-08</td>\n",
+       "      <td>0.943227</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>B1</td>\n",
+       "      <td>E1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>1.750108e-08</td>\n",
-       "      <td>0.896367</td>\n",
+       "      <td>-8.730562e-09</td>\n",
+       "      <td>1.008576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>F1</td>\n",
+       "      <td>L1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-2.858492e-08</td>\n",
-       "      <td>1.172151</td>\n",
+       "      <td>-1.883061e-08</td>\n",
+       "      <td>0.904626</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>L1</td>\n",
+       "      <td>C2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-4.793437e-08</td>\n",
-       "      <td>0.853500</td>\n",
+       "      <td>9.821067e-08</td>\n",
+       "      <td>0.998107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>I1</td>\n",
+       "      <td>F1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>5.655717e-08</td>\n",
-       "      <td>1.032958</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>B2</td>\n",
-       "      <td>1.000000e-09</td>\n",
-       "      <td>-8.211396e-09</td>\n",
-       "      <td>0.953937</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>C2</td>\n",
-       "      <td>1.000000e-09</td>\n",
-       "      <td>9.149451e-08</td>\n",
-       "      <td>0.810390</td>\n",
+       "      <td>6.898043e-08</td>\n",
+       "      <td>1.039487</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -224,38 +219,36 @@
       ],
       "text/plain": [
        "   Group  TDC resolution       theta_0   theta_1\n",
-       "0     H1    1.000000e-09 -4.302463e-09  0.894084\n",
-       "1     F2    1.000000e-09 -3.884088e-09  0.818788\n",
-       "2     C1    1.000000e-09  5.615007e-08  1.071039\n",
-       "3     M2    1.000000e-09  7.055282e-09  0.966609\n",
-       "4     A1    1.000000e-09  9.565368e-08  1.175509\n",
-       "5     D1    1.000000e-09 -9.485252e-08  1.183850\n",
-       "6     G1    1.000000e-09 -2.617468e-08  0.867405\n",
-       "7     A2    1.000000e-09 -9.247325e-08  1.191295\n",
-       "8     I2    1.000000e-09  3.922536e-08  0.810140\n",
-       "9     E1    1.000000e-09 -8.552598e-08  1.015219\n",
-       "10    M1    1.000000e-09  1.919863e-08  1.063088\n",
-       "11    L2    1.000000e-09  3.305320e-08  1.026705\n",
-       "12    G2    1.000000e-09  3.519425e-08  1.094493\n",
-       "13    D2    1.000000e-09  9.489726e-08  0.822722\n",
-       "14    H2    1.000000e-09  7.363812e-08  0.981798\n",
-       "15    E2    1.000000e-09 -5.953871e-10  0.959322\n",
-       "16    B1    1.000000e-09  1.750108e-08  0.896367\n",
-       "17    F1    1.000000e-09 -2.858492e-08  1.172151\n",
-       "18    L1    1.000000e-09 -4.793437e-08  0.853500\n",
-       "19    I1    1.000000e-09  5.655717e-08  1.032958\n",
-       "20    B2    1.000000e-09 -8.211396e-09  0.953937\n",
-       "21    C2    1.000000e-09  9.149451e-08  0.810390"
+       "0     M1    1.000000e-09  1.671544e-08  0.986738\n",
+       "1     B2    1.000000e-09  5.923319e-08  0.806152\n",
+       "2     H2    1.000000e-09 -1.937380e-08  1.075806\n",
+       "3     G1    1.000000e-09  4.740700e-08  1.166787\n",
+       "4     A2    1.000000e-09  7.432325e-08  1.051548\n",
+       "5     D1    1.000000e-09  9.576999e-08  1.170603\n",
+       "6     E2    1.000000e-09 -7.108686e-08  1.105351\n",
+       "7     F2    1.000000e-09 -8.985284e-08  1.107622\n",
+       "8     C1    1.000000e-09 -1.716545e-08  0.823004\n",
+       "9     L2    1.000000e-09 -4.504549e-08  1.061967\n",
+       "10    G2    1.000000e-09 -4.553415e-08  0.959833\n",
+       "11    H1    1.000000e-09 -2.917539e-08  0.844489\n",
+       "12    B1    1.000000e-09  1.503123e-08  1.098547\n",
+       "13    M2    1.000000e-09  9.192334e-08  1.023620\n",
+       "14    D2    1.000000e-09  1.779820e-08  1.041835\n",
+       "15    A1    1.000000e-09 -4.285620e-08  0.943227\n",
+       "16    E1    1.000000e-09 -8.730562e-09  1.008576\n",
+       "17    L1    1.000000e-09 -1.883061e-08  0.904626\n",
+       "18    C2    1.000000e-09  9.821067e-08  0.998107\n",
+       "19    F1    1.000000e-09  6.898043e-08  1.039487"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files_path = \"../data/Lab3_groups_2021\"\n",
-    "export_path = \"data/2021\"\n",
+    "files_path = f\"data/private/{YEAR}_original\"\n",
+    "export_path = f\"data/{YEAR}\"\n",
     "\n",
     "df = data_processing (files_path, export_path, tdc_resolution = 1e-9)\n",
     "df"
@@ -263,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,12 +268,12 @@
     "\n",
     "file_name = f\"manipulation_{version}\"\n",
     "\n",
-    "df.to_csv ( f\"data/manipulation/{file_name}.txt\", header = df.columns, index = None, sep = \" \" )"
+    "df.to_csv ( f\"data/private/manipulation/{file_name}.txt\", header = df.columns, index = None, sep = \" \" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -312,33 +305,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>8.193757e-06</td>\n",
-       "      <td>-6.237501e-09</td>\n",
-       "      <td>-4.093750e-09</td>\n",
+       "      <td>3.333315e-06</td>\n",
+       "      <td>-2.933333e-09</td>\n",
+       "      <td>-2.855208e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>9.376144e-06</td>\n",
-       "      <td>-3.050000e-09</td>\n",
-       "      <td>-2.968750e-09</td>\n",
+       "      <td>8.067163e-07</td>\n",
+       "      <td>-2.966666e-09</td>\n",
+       "      <td>-2.712500e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9.714738e-06</td>\n",
-       "      <td>-2.927083e-09</td>\n",
-       "      <td>-2.935416e-09</td>\n",
+       "      <td>9.333067e-06</td>\n",
+       "      <td>-2.910416e-09</td>\n",
+       "      <td>-2.920833e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5.319017e-07</td>\n",
-       "      <td>-2.927083e-09</td>\n",
-       "      <td>-2.941666e-09</td>\n",
+       "      <td>3.492111e-06</td>\n",
+       "      <td>-2.931250e-09</td>\n",
+       "      <td>-2.914583e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>3.816507e-06</td>\n",
-       "      <td>-3.515625e-09</td>\n",
-       "      <td>-3.368750e-09</td>\n",
+       "      <td>4.754411e-06</td>\n",
+       "      <td>-3.076041e-09</td>\n",
+       "      <td>-2.925000e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -347,58 +340,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21117</th>\n",
-       "      <td>6.652753e-06</td>\n",
-       "      <td>-2.937500e-09</td>\n",
-       "      <td>-2.929166e-09</td>\n",
+       "      <th>34865</th>\n",
+       "      <td>9.015338e-06</td>\n",
+       "      <td>-3.050000e-09</td>\n",
+       "      <td>-2.911458e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21118</th>\n",
-       "      <td>1.892251e-06</td>\n",
-       "      <td>-2.985416e-09</td>\n",
-       "      <td>-2.964583e-09</td>\n",
+       "      <th>34866</th>\n",
+       "      <td>8.858790e-06</td>\n",
+       "      <td>-2.943750e-09</td>\n",
+       "      <td>-2.925000e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21119</th>\n",
-       "      <td>1.740821e-06</td>\n",
-       "      <td>-4.506250e-09</td>\n",
-       "      <td>-4.929167e-09</td>\n",
+       "      <th>34867</th>\n",
+       "      <td>1.279616e-06</td>\n",
+       "      <td>-2.962500e-09</td>\n",
+       "      <td>-2.927083e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21120</th>\n",
-       "      <td>8.695099e-06</td>\n",
-       "      <td>-3.004166e-09</td>\n",
-       "      <td>-3.028125e-09</td>\n",
+       "      <th>34868</th>\n",
+       "      <td>3.175933e-06</td>\n",
+       "      <td>-2.993750e-09</td>\n",
+       "      <td>-2.975000e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21121</th>\n",
-       "      <td>1.056560e-05</td>\n",
-       "      <td>-2.980208e-09</td>\n",
-       "      <td>-2.952083e-09</td>\n",
+       "      <th>34869</th>\n",
+       "      <td>7.438573e-06</td>\n",
+       "      <td>-2.927083e-09</td>\n",
+       "      <td>-2.914583e-09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>21121 rows × 3 columns</p>\n",
+       "<p>34869 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                TDC          QDC1          QDC2\n",
-       "1      8.193757e-06 -6.237501e-09 -4.093750e-09\n",
-       "2      9.376144e-06 -3.050000e-09 -2.968750e-09\n",
-       "3      9.714738e-06 -2.927083e-09 -2.935416e-09\n",
-       "4      5.319017e-07 -2.927083e-09 -2.941666e-09\n",
-       "5      3.816507e-06 -3.515625e-09 -3.368750e-09\n",
+       "1      3.333315e-06 -2.933333e-09 -2.855208e-09\n",
+       "2      8.067163e-07 -2.966666e-09 -2.712500e-09\n",
+       "3      9.333067e-06 -2.910416e-09 -2.920833e-09\n",
+       "4      3.492111e-06 -2.931250e-09 -2.914583e-09\n",
+       "5      4.754411e-06 -3.076041e-09 -2.925000e-09\n",
        "...             ...           ...           ...\n",
-       "21117  6.652753e-06 -2.937500e-09 -2.929166e-09\n",
-       "21118  1.892251e-06 -2.985416e-09 -2.964583e-09\n",
-       "21119  1.740821e-06 -4.506250e-09 -4.929167e-09\n",
-       "21120  8.695099e-06 -3.004166e-09 -3.028125e-09\n",
-       "21121  1.056560e-05 -2.980208e-09 -2.952083e-09\n",
+       "34865  9.015338e-06 -3.050000e-09 -2.911458e-09\n",
+       "34866  8.858790e-06 -2.943750e-09 -2.925000e-09\n",
+       "34867  1.279616e-06 -2.962500e-09 -2.927083e-09\n",
+       "34868  3.175933e-06 -2.993750e-09 -2.975000e-09\n",
+       "34869  7.438573e-06 -2.927083e-09 -2.914583e-09\n",
        "\n",
-       "[21121 rows x 3 columns]"
+       "[34869 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,11 +410,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "8c20d6d9e797a7c66fd98919ef342e5fef85dde23b3fcb4f5ea3c4b286a13048"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -435,9 +425,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.15"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "044c6751b62503dbd7d7ed91d53eba4754986c1a2e5ed733260fb3415ab22cb4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
