--- a/prepare_data.ipynb
+++ b/prepare_data.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "YEAR = 2022"
+    "YEAR = 2023"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,141 +77,169 @@
        "      <th>0</th>\n",
        "      <td>M1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>1.671544e-08</td>\n",
-       "      <td>0.986738</td>\n",
+       "      <td>2.257065e-08</td>\n",
+       "      <td>0.979785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>B2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>5.923319e-08</td>\n",
-       "      <td>0.806152</td>\n",
+       "      <td>-7.782111e-08</td>\n",
+       "      <td>0.964943</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>H2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-1.937380e-08</td>\n",
-       "      <td>1.075806</td>\n",
+       "      <td>-5.105923e-08</td>\n",
+       "      <td>1.145581</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>G1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>4.740700e-08</td>\n",
-       "      <td>1.166787</td>\n",
+       "      <td>-6.576163e-08</td>\n",
+       "      <td>1.043212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>A2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>7.432325e-08</td>\n",
-       "      <td>1.051548</td>\n",
+       "      <td>-1.777116e-08</td>\n",
+       "      <td>1.158012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>D1</td>\n",
+       "      <td>N1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>9.576999e-08</td>\n",
-       "      <td>1.170603</td>\n",
+       "      <td>4.721098e-08</td>\n",
+       "      <td>1.158455</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>E2</td>\n",
+       "      <td>D1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-7.108686e-08</td>\n",
-       "      <td>1.105351</td>\n",
+       "      <td>-3.544560e-08</td>\n",
+       "      <td>0.979601</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>F2</td>\n",
+       "      <td>E2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-8.985284e-08</td>\n",
-       "      <td>1.107622</td>\n",
+       "      <td>9.735311e-08</td>\n",
+       "      <td>1.087785</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>C1</td>\n",
+       "      <td>I1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-1.716545e-08</td>\n",
-       "      <td>0.823004</td>\n",
+       "      <td>8.471486e-09</td>\n",
+       "      <td>1.137453</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>L2</td>\n",
+       "      <td>C1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-4.504549e-08</td>\n",
-       "      <td>1.061967</td>\n",
+       "      <td>-6.901195e-08</td>\n",
+       "      <td>0.920230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>G2</td>\n",
+       "      <td>L2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-4.553415e-08</td>\n",
-       "      <td>0.959833</td>\n",
+       "      <td>-1.685855e-08</td>\n",
+       "      <td>0.824570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>H1</td>\n",
+       "      <td>T2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-2.917539e-08</td>\n",
-       "      <td>0.844489</td>\n",
+       "      <td>-7.009671e-08</td>\n",
+       "      <td>1.116873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>B1</td>\n",
+       "      <td>G2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>1.503123e-08</td>\n",
-       "      <td>1.098547</td>\n",
+       "      <td>-1.304252e-08</td>\n",
+       "      <td>1.116803</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>M2</td>\n",
+       "      <td>H1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>9.192334e-08</td>\n",
-       "      <td>1.023620</td>\n",
+       "      <td>-5.472650e-08</td>\n",
+       "      <td>0.999573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>D2</td>\n",
+       "      <td>B1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>1.779820e-08</td>\n",
-       "      <td>1.041835</td>\n",
+       "      <td>-8.768473e-08</td>\n",
+       "      <td>1.078584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>A1</td>\n",
+       "      <td>M2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-4.285620e-08</td>\n",
-       "      <td>0.943227</td>\n",
+       "      <td>5.229537e-08</td>\n",
+       "      <td>1.090799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>E1</td>\n",
+       "      <td>D2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-8.730562e-09</td>\n",
-       "      <td>1.008576</td>\n",
+       "      <td>2.266700e-08</td>\n",
+       "      <td>1.110875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>L1</td>\n",
+       "      <td>N2</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>-1.883061e-08</td>\n",
-       "      <td>0.904626</td>\n",
+       "      <td>-8.057764e-08</td>\n",
+       "      <td>1.041289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>C2</td>\n",
+       "      <td>A1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>9.821067e-08</td>\n",
-       "      <td>0.998107</td>\n",
+       "      <td>1.306051e-08</td>\n",
+       "      <td>0.847790</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>F1</td>\n",
+       "      <td>E1</td>\n",
        "      <td>1.000000e-09</td>\n",
-       "      <td>6.898043e-08</td>\n",
-       "      <td>1.039487</td>\n",
+       "      <td>5.787667e-09</td>\n",
+       "      <td>0.856219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>L1</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>6.066219e-08</td>\n",
+       "      <td>1.158346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>C2</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>-8.939215e-09</td>\n",
+       "      <td>0.912728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>I2</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>-3.708452e-08</td>\n",
+       "      <td>1.166748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>T1</td>\n",
+       "      <td>1.000000e-09</td>\n",
+       "      <td>-5.922482e-08</td>\n",
+       "      <td>1.019068</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -219,29 +247,33 @@
       ],
       "text/plain": [
        "   Group  TDC resolution       theta_0   theta_1\n",
-       "0     M1    1.000000e-09  1.671544e-08  0.986738\n",
-       "1     B2    1.000000e-09  5.923319e-08  0.806152\n",
-       "2     H2    1.000000e-09 -1.937380e-08  1.075806\n",
-       "3     G1    1.000000e-09  4.740700e-08  1.166787\n",
-       "4     A2    1.000000e-09  7.432325e-08  1.051548\n",
-       "5     D1    1.000000e-09  9.576999e-08  1.170603\n",
-       "6     E2    1.000000e-09 -7.108686e-08  1.105351\n",
-       "7     F2    1.000000e-09 -8.985284e-08  1.107622\n",
-       "8     C1    1.000000e-09 -1.716545e-08  0.823004\n",
-       "9     L2    1.000000e-09 -4.504549e-08  1.061967\n",
-       "10    G2    1.000000e-09 -4.553415e-08  0.959833\n",
-       "11    H1    1.000000e-09 -2.917539e-08  0.844489\n",
-       "12    B1    1.000000e-09  1.503123e-08  1.098547\n",
-       "13    M2    1.000000e-09  9.192334e-08  1.023620\n",
-       "14    D2    1.000000e-09  1.779820e-08  1.041835\n",
-       "15    A1    1.000000e-09 -4.285620e-08  0.943227\n",
-       "16    E1    1.000000e-09 -8.730562e-09  1.008576\n",
-       "17    L1    1.000000e-09 -1.883061e-08  0.904626\n",
-       "18    C2    1.000000e-09  9.821067e-08  0.998107\n",
-       "19    F1    1.000000e-09  6.898043e-08  1.039487"
+       "0     M1    1.000000e-09  2.257065e-08  0.979785\n",
+       "1     B2    1.000000e-09 -7.782111e-08  0.964943\n",
+       "2     H2    1.000000e-09 -5.105923e-08  1.145581\n",
+       "3     G1    1.000000e-09 -6.576163e-08  1.043212\n",
+       "4     A2    1.000000e-09 -1.777116e-08  1.158012\n",
+       "5     N1    1.000000e-09  4.721098e-08  1.158455\n",
+       "6     D1    1.000000e-09 -3.544560e-08  0.979601\n",
+       "7     E2    1.000000e-09  9.735311e-08  1.087785\n",
+       "8     I1    1.000000e-09  8.471486e-09  1.137453\n",
+       "9     C1    1.000000e-09 -6.901195e-08  0.920230\n",
+       "10    L2    1.000000e-09 -1.685855e-08  0.824570\n",
+       "11    T2    1.000000e-09 -7.009671e-08  1.116873\n",
+       "12    G2    1.000000e-09 -1.304252e-08  1.116803\n",
+       "13    H1    1.000000e-09 -5.472650e-08  0.999573\n",
+       "14    B1    1.000000e-09 -8.768473e-08  1.078584\n",
+       "15    M2    1.000000e-09  5.229537e-08  1.090799\n",
+       "16    D2    1.000000e-09  2.266700e-08  1.110875\n",
+       "17    N2    1.000000e-09 -8.057764e-08  1.041289\n",
+       "18    A1    1.000000e-09  1.306051e-08  0.847790\n",
+       "19    E1    1.000000e-09  5.787667e-09  0.856219\n",
+       "20    L1    1.000000e-09  6.066219e-08  1.158346\n",
+       "21    C2    1.000000e-09 -8.939215e-09  0.912728\n",
+       "22    I2    1.000000e-09 -3.708452e-08  1.166748\n",
+       "23    T1    1.000000e-09 -5.922482e-08  1.019068"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,33 +337,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3.333315e-06</td>\n",
-       "      <td>-2.933333e-09</td>\n",
-       "      <td>-2.855208e-09</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>-8.195830e-10</td>\n",
+       "      <td>-8.299997e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8.067163e-07</td>\n",
-       "      <td>-2.966666e-09</td>\n",
-       "      <td>-2.712500e-09</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>-8.133330e-10</td>\n",
+       "      <td>-8.029163e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9.333067e-06</td>\n",
-       "      <td>-2.910416e-09</td>\n",
-       "      <td>-2.920833e-09</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>-8.154163e-10</td>\n",
+       "      <td>-8.154163e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>3.492111e-06</td>\n",
-       "      <td>-2.931250e-09</td>\n",
-       "      <td>-2.914583e-09</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>-8.174997e-10</td>\n",
+       "      <td>-8.174997e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>4.754411e-06</td>\n",
-       "      <td>-3.076041e-09</td>\n",
-       "      <td>-2.925000e-09</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>-8.174997e-10</td>\n",
+       "      <td>-8.195830e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -340,58 +372,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34865</th>\n",
-       "      <td>9.015338e-06</td>\n",
-       "      <td>-3.050000e-09</td>\n",
-       "      <td>-2.911458e-09</td>\n",
+       "      <th>27160</th>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>-9.636254e-09</td>\n",
+       "      <td>-5.730002e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34866</th>\n",
-       "      <td>8.858790e-06</td>\n",
-       "      <td>-2.943750e-09</td>\n",
-       "      <td>-2.925000e-09</td>\n",
+       "      <th>27161</th>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>-5.309168e-09</td>\n",
+       "      <td>-2.869584e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34867</th>\n",
-       "      <td>1.279616e-06</td>\n",
-       "      <td>-2.962500e-09</td>\n",
-       "      <td>-2.927083e-09</td>\n",
+       "      <th>27162</th>\n",
+       "      <td>0.000001</td>\n",
+       "      <td>-1.927917e-09</td>\n",
+       "      <td>-1.627917e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34868</th>\n",
-       "      <td>3.175933e-06</td>\n",
-       "      <td>-2.993750e-09</td>\n",
-       "      <td>-2.975000e-09</td>\n",
+       "      <th>27163</th>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>-3.444584e-09</td>\n",
+       "      <td>-4.544585e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34869</th>\n",
-       "      <td>7.438573e-06</td>\n",
-       "      <td>-2.927083e-09</td>\n",
-       "      <td>-2.914583e-09</td>\n",
+       "      <th>27164</th>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>-4.634168e-09</td>\n",
+       "      <td>-1.889375e-09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>34869 rows × 3 columns</p>\n",
+       "<p>27164 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                TDC          QDC1          QDC2\n",
-       "1      3.333315e-06 -2.933333e-09 -2.855208e-09\n",
-       "2      8.067163e-07 -2.966666e-09 -2.712500e-09\n",
-       "3      9.333067e-06 -2.910416e-09 -2.920833e-09\n",
-       "4      3.492111e-06 -2.931250e-09 -2.914583e-09\n",
-       "5      4.754411e-06 -3.076041e-09 -2.925000e-09\n",
-       "...             ...           ...           ...\n",
-       "34865  9.015338e-06 -3.050000e-09 -2.911458e-09\n",
-       "34866  8.858790e-06 -2.943750e-09 -2.925000e-09\n",
-       "34867  1.279616e-06 -2.962500e-09 -2.927083e-09\n",
-       "34868  3.175933e-06 -2.993750e-09 -2.975000e-09\n",
-       "34869  7.438573e-06 -2.927083e-09 -2.914583e-09\n",
+       "            TDC          QDC1          QDC2\n",
+       "1      0.000008 -8.195830e-10 -8.299997e-10\n",
+       "2      0.000010 -8.133330e-10 -8.029163e-10\n",
+       "3      0.000008 -8.154163e-10 -8.154163e-10\n",
+       "4      0.000003 -8.174997e-10 -8.174997e-10\n",
+       "5      0.000002 -8.174997e-10 -8.195830e-10\n",
+       "...         ...           ...           ...\n",
+       "27160  0.000009 -9.636254e-09 -5.730002e-09\n",
+       "27161  0.000002 -5.309168e-09 -2.869584e-09\n",
+       "27162  0.000001 -1.927917e-09 -1.627917e-09\n",
+       "27163  0.000009 -3.444584e-09 -4.544585e-09\n",
+       "27164  0.000007 -4.634168e-09 -1.889375e-09\n",
        "\n",
-       "[34869 rows x 3 columns]"
+       "[27164 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -425,9 +457,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "044c6751b62503dbd7d7ed91d53eba4754986c1a2e5ed733260fb3415ab22cb4"
